learn: 타입스크립트로 HTML 조작
- html 조작시 narrowing하는 방법 5가지
- instanceof로 narrowing하는 방법
- 실습 예제

--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./index.js" type="module"></script>
+    <script defer src="./index.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h4 id="title">안녕하세요</h4>
+    <a href="naver.com" class="link">링크</a>
+    <button id="button">버튼</button>
+    <img
+      src="https://cdn.newstof.com/news/photo/202303/20152_20196_3216.jpg"
+      alt="강아지"
+      class="image1"
+    />
+    <button class="changeButton">이미지변경</button>
+    <a href="naver.com" class="naver">전부바꾸고싶음</a>
+    <a href="naver.com" class="naver">전부바꾸고싶음</a>
+    <a href="naver.com" class="naver">전부바꾸고싶음</a>
+  </body>
 </html>
