learn: class문법 protected & static
- 1. protected
- private와 비슷하지만 조금 더 유연함
- 복사된 class에서도 사용가능
- 2. static
- class 안에서 생성된건 원래 자식에게 물려줌
- 하지만 static을 붙이면 물려주지않음
- private / protected / public과 같이 사용가능

--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
     <a href="naver.com" class="naver">전부바꾸고싶음</a>
     <a href="naver.com" class="naver">전부바꾸고싶음</a>
     <a href="naver.com" class="naver">전부바꾸고싶음</a>
+    <div
+      class="box-container"
+      style="width: 400px; height: 400px; position: relative"
+    ></div>
   </body>
 </html>
